Issue #2425: Working defrading
Worked with some values that I have printed from m2g-data-viewer debug.
Data returned from the m2g test suite has not been so helpful, it
ends up with data that does not look correct at all, I think its due to
different parameters used in the test